--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
     "migrate": "node src/migrate.js",
-    "migrate:paper": "node src/migrate-paper-trading.js"
+    "migrate:paper": "node src/migrate-paper-trading.js",
+    "migrate:indicators": "node src/migrate-indicators.js"
   },
   "dependencies": {
     "axios": "^1.6.5",
