--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "node --watch src/index.js",
     "migrate": "node src/migrate.js",
     "migrate:paper": "node src/migrate-paper-trading.js",
-    "migrate:indicators": "node src/migrate-indicators.js"
+    "migrate:indicators": "node src/migrate-indicators.js",
+    "migrate:accounts": "node src/migrate-multi-account.js"
   },
   "dependencies": {
     "axios": "^1.6.5",
