--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
+    "express": "^5.2.1",
     "https-proxy-agent": "^7.0.6",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.64.0",
